tests/lime/fail/tokens/macro_rest/byte_91.wsa
macro m[ [push 91] m[
